# embed_fast5

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  pytest.ini  run_embed_fast5.py  setup.py
Docker/: Dockerfile  run_wrapper.sh
cmake/: AddDependencies.cmake  AddGoogleTest.cmake  Toolchain_macos_gcc.cmake  cmake_uninstall.cmake.in  embedConfig.cmake
dynamicLibrary/: CMakeLists.txt
embed/: embedding_helpers.py  split_multi_read.py
embed/test/: test_embedding_helpers.py  test_split_multi_read.py
fast5/include/: fast5.hpp
impl/: PythonBindings.cpp  embed_fast5.cpp  embed_utils.cpp  filter_alignments.cpp  top_kmers.cpp
inc/: embed_fast5.hpp  embed_utils.hpp  filter_alignments.hpp  top_kmers.hpp
src/: AlignmentFile.cpp  AlignmentFile.hpp  AmbigModel.hpp  AssignmentFile.cpp  AssignmentFile.hpp  BaseKmer.hpp  BedFile.cpp  BedFile.hpp  BinaryEventReader.cpp  BinaryEventReader.hpp  BinaryEventWriter.cpp  BinaryEventWriter.hpp  BinaryIO.cpp  BinaryIO.hpp  ConcurrentQueue.hpp  EmbedFast5.cpp  EmbedFast5.hpp  EmbedUtils.cpp  EmbedUtils.hpp  EventDataHandler.cpp  EventDataHandler.hpp  FilterAlignments.cpp  FilterAlignments.hpp  FolderHandler.cpp  FolderHandler.hpp  FullSaEvent.cpp  FullSaEvent.hpp  LoadVariantPaths.cpp  LoadVariantPaths.hpp  MarginalizeVariants.cpp  MarginalizeVariants.hpp  MaxKmers.cpp  MaxKmers.hpp  PerPositionKmers.hpp  PerPositonKmers.cpp  PerPositonKmers.hpp  PositionsFile.cpp  PositionsFile.hpp  PositionsKmerDistributions.cpp  PositionsKmerDistributions.hpp  (+14 more)
src/embed/: CMakeLists.txt  PythonBindings.cpp  embedding_helpers.py  fast5.py  split_multi_read.py
src/scripts/: EmbedFast5.cpp  FilterAlignments.cpp  SignalAlignToBed.cpp  embed_fast5.cpp  embed_fast5s.py  signalalign_to_bed.cpp  split_multi_fast5.py  top_kmers.cpp  top_kmers.hpp
staticLibrary/: CMakeLists.txt
tests/: CMakeLists.txt  allTests.cpp  test_cpp_tests.py  test_embedding_helpers.py  test_python_wrappers.py  test_split_multi_read.py
tests/src/: AmbigModelTests.hpp  BaseKmerTests.hpp  BinaryEventTests.hpp  BinaryFileTests.hpp  BinaryIOTests.hpp  ConcurrentQueueTests.hpp  EmbedUtilsTests.hpp  Fast5Tests.hpp  FileTests.hpp  FilterAlignmentsTests.hpp  MarginalizeVariantsTests.hpp  MaxKmersTests.hpp  PerPositionKmersTests.hpp  TestFiles.hpp  TopKmersTests.hpp  VariantPathTests.hpp  allTests.cpp
tests/test_files/: just_signal.fast5  multi_read_test_no_fastq.fast5  read_002f9702-c19e-48c2-8e72-9021adbd4a48.fast5  test_create_file.fast5
tests/test_files/alignment_files/: 7d31de25-8c15-46d8-a08c-3d5043258c89.sm.forward.tsv  8898d755-e46d-4cbe-842c-545a97718b9d.sm.backward.tsv  c53bec1d-8cd7-43d0-8e40-e5e363fa9fca.sm.backward.tsv
tests/test_files/bed_files/: test.bed
tests/test_files/fast5s/: DEAMERNANOPORE_20161117_FNFAB43577_MN16450_mux_scan_MA_821_R9_4_NA12878_11_17_16_95723_ch458_read26_strand.fast5  empty_tester.fast5  just_signal.fast5  multi_read_test.fast5  read_002f9702-c19e-48c2-8e72-9021adbd4a48.fast5
tests/test_files/new_individual_files/: new_individual.fastq  new_individual.fastq.index  new_individual.fastq.index.fai  new_individual.fastq.index.readdb  read_00087eac-80d1-4328-b755-24f4b192c7d0.fast5  read_002625e8-9a2e-411c-99a7-ee3fa6b9eef1.fast5  read_0037480f-176e-44b7-bd11-c23124837596.fast5  read_0052794f-313f-4b93-9063-7fdb0f79d23c.fast5
tests/test_files/pUC_reference/: pUC19_SspI.fa.fai
tests/test_files/positions_tests/: short_test.positions
tests/test_files/positions_tests/correct_outputs/: 5cc86bac-79fd-4897-8631-8f1c55954a45.sm.backward.tsv  6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv  9e4d14b1-8167-44ef-9fdb-5c29dd0763fd.sm.backward.tsv
tests/test_files/r94_tests/: small_sample.bam  small_sample.fastq  small_sample.fastq.index  small_sample.fastq.index.fai  small_sample.fastq.index.readdb  small_sample.sam  small_sample.sorted.bam  test.readdb
tests/test_files/r94_tests/fast5/: DEAMERNANOPORE_20161117_FNFAB43577_MN16450_sequencing_run_MA_821_R9_4_NA12878_11_17_16_88738_ch1_read1464_strand.fast5  DEAMERNANOPORE_20161117_FNFAB43577_MN16450_sequencing_run_MA_821_R9_4_NA12878_11_17_16_89607_ch108_read1153_strand.fast5  DEAMERNANOPORE_20161117_FNFAB43577_MN16450_sequencing_run_MA_821_R9_4_NA12878_11_17_16_89607_ch129_read2937_strand.fast5  DEAMERNANOPORE_20161117_FNFAB43577_MN16450_sequencing_run_MA_821_R9_4_NA12878_11_17_16_89607_ch292_read685_strand.fast5  DEAMERNANOPORE_20161117_FNFAB43577_MN16450_sequencing_run_MA_821_R9_4_NA12878_11_17_16_89607_ch422_read4673_strand.fast5  DEAMERNANOPORE_20161117_FNFAB43577_MN16450_sequencing_run_MA_821_R9_4_NA12878_11_17_16_89607_ch462_read69_strand.fast5
tests/test_files/rRNA_test_files/: 16S_final_branch_points.positions  ec_16S.fa  ec_16S.fa.fai
tests/test_files/rRNA_test_files/rRNA_signal_files/: 1a424c03-7f13-4565-b991-3f7d9c36bf86.sm.forward.tsv  1dce49b4-b3e0-4226-9cd2-6e147410e43b.sm.forward.tsv  1ddd5c89-8e3c-4dea-b4af-285b20c0ee8a.sm.forward.tsv  1deb69df-9000-4e78-890f-ff7477c77991.sm.forward.tsv  1df11165-c69a-4e29-9c8e-14a3ad2cac1d.sm.forward.tsv
tests/test_files/rRNA_test_files/test_output_dir/: per_path_counts.tsv  per_read_calls.tsv
tests/test_files/test_ambig_model/: mod_variants.model
tests/test_files/test_readdb/: new_individual.fastq.index.readdb  read_002f9702-c19e-48c2-8e72-9021adbd4a48.fast5
tests/test_files/test_top_kmers/: builtAssignment1.tsv  builtAssignment2.tsv  builtAssignment3.tsv  built_log.tsv
